--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,7 @@
   #style.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
- */
+
 
 
 
@@ -18,19 +16,20 @@
 
   /**
    * COLORS
-   */
+   /* */
+   /* hsla(267, 100%, 63%, 1); */ */
 
   /* background color */
-  --bg-purple: hsla(267, 100%, 63%, 1);
-  --bg-purple-alpha-30: hsla(267, 100%, 63%, 0.3);
-  --bg-dark-purple: hsla(279, 42%, 9%, 1);
+  --bg-purple: hsla(30, 74%, 50%, 0.3);
+  --bg-purple-alpha-30: hsla(30, 74%, 50%, 0.3);
+  --bg-dark-purple: rgb(60, 36, 73);
   --bg-oxford-blue: hsla(240, 63%, 13%, 1);
   --bg-oxford-blue-alpha-95: hsla(240, 63%, 13%, 0.95);
   --bg-oxford-blue-alpha-90: hsla(240, 63%, 13%, 0.9);
   --bg-oxford-blue-alpha-80: hsla(240, 63%, 13%, 0.8);
 
   /* gradient color */
-  --gradient-1: linear-gradient(to right bottom, hsl(299, 100%, 52%), hsl(291, 100%, 58%), hsl(283, 100%, 60%), hsl(273, 100%, 62%), hsl(262, 100%, 63%), hsl(242, 100%, 69%), hsl(223, 100%, 62%), hsl(210, 100%, 50%), hsl(203, 100%, 50%), hsl(198, 100%, 50%), hsl(192, 100%, 48%), hsl(185, 90%, 48%));
+  --gradient-1: linear-gradient(to right bottom, hsl(36, 61%, 76%), hsl(24, 39%, 58%), hsl(283, 100%, 60%), hsl(273, 100%, 62%), hsl(262, 100%, 63%), hsl(242, 100%, 69%), hsl(223, 100%, 62%), hsl(210, 100%, 50%), hsl(203, 100%, 50%), hsl(198, 100%, 50%), hsl(192, 100%, 48%), hsl(185, 90%, 48%));
   --gradient-2: linear-gradient(90deg, transparent 0%, #9841ff 50%, transparent 100%);
 
   /* text color */
@@ -336,7 +335,7 @@ body {
   left: 0;
   width: 100%;
   background-color: var(--bg-oxford-blue);
-  padding: 10px 12px;
+  padding: 0px 12px;
   z-index: 4;
 }
 
@@ -417,7 +416,7 @@ body {
   text-align: center;
 }
 
-.hero .section-subtitle { letter-spacing: 5px; }
+.hero .section-subtitle { letter-spacing: 5px; margin: 3px; }
 
 .hero-title { margin-block: 20px 25px; }
 
@@ -434,7 +433,7 @@ body {
 
 .hero-banner {
   position: relative;
-  margin-block-start: 50px;
+  margin-block-start: -40px;
 }
 
 .hero-banner-bg { display: none; }
