--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,7 +266,7 @@ body {
 }
 
 .btn:is(:hover,
- :focus-visible)::before {
+    :focus-visible)::before {
     transform: translate(-50%, -50%) scale(1);
 }
 
@@ -364,6 +364,7 @@ body {
     0% {
         transform: translateY(-100%);
     }
+
     100% {
         transform: translateY(0);
     }
@@ -568,7 +569,7 @@ body {
 }
 
 .upcoming-time :is(.time,
-.date) {
+    .date) {
     text-align: center;
 }
 
@@ -596,7 +597,7 @@ body {
 }
 
 .upcoming-item .social-link:is(:hover,
- :focus-visible) {
+    :focus-visible) {
     color: var(--text-purple);
 }
 
@@ -636,7 +637,7 @@ body {
 }
 
 .news-card :is(.card-meta-list,
-.card-meta-item) {
+    .card-meta-item) {
     display: flex;
     align-items: center;
 }
@@ -676,7 +677,7 @@ body {
 }
 
 .news-card .card-title:is(:hover,
- :focus-visible) {
+    :focus-visible) {
     background-size: 100% 4px;
 }
 
@@ -697,7 +698,7 @@ body {
 }
 
 .news-card .link:is(:hover,
- :focus-visible) {
+    :focus-visible) {
     color: var(--text-purple);
 }
 
@@ -758,7 +759,7 @@ body {
 }
 
 .footer-link:is(:hover,
- :focus-visible) {
+    :focus-visible) {
     color: var(--text-purple);
 }
 
@@ -791,10 +792,12 @@ body {
 .footer-bottom {
     clip-path: var(--clip-path-9);
     background-color: var(--bg-oxford-blue-alpha-80);
+    height: 8rem;
+
 }
 
 .copyright {
-    padding: 30px 20px;
+    padding: 10px 5px;
 }
 
 
@@ -843,6 +846,7 @@ body {
  */
 
 @media (min-width: 575px) {
+
     /**
    * REUSED STYLE
    */
@@ -851,6 +855,7 @@ body {
         width: 100%;
         margin-inline: auto;
     }
+
     /**
    * HEADER
    */
@@ -859,6 +864,7 @@ body {
         height: 160px;
         padding-bottom: 4.5rem;
     }
+
     /**
    * UPCOMING
    */
@@ -866,9 +872,11 @@ body {
         left: auto;
         right: -15%;
     }
+
     .upcoming-card.right .card-meta {
         left: 25%;
     }
+
     /**
    * FOOTER
    */
@@ -883,10 +891,11 @@ body {
  */
 
 @media (min-width: 768px) {
+
     /**
    * CUSTOM PROPERTY
    */
-     :root {
+    :root {
         /**
      * TYPOGRAPHY
      */
@@ -894,21 +903,25 @@ body {
         --fontSize-1: 6.5rem;
         --fontSize-2: 3.2rem;
     }
+
     /**
    * REUSED STYLE
    */
     .container {
         max-width: 720px;
     }
+
     .h1 {
         line-height: 1;
     }
+
     /**
    * HERO
    */
     .hero .section-subtitle {
         letter-spacing: 10px;
     }
+
     .hero-banner-bg {
         display: block;
         width: 100%;
@@ -919,28 +932,35 @@ body {
         transform-origin: bottom;
         z-index: -1;
     }
+
     /**
    * UPCOMING
    */
     .upcoming-card::before {
         height: 110px;
     }
+
     .upcoming-card .card-meta {
         padding-block: 12px;
         bottom: 20px;
     }
+
     .upcoming-card .card-title {
         --fontSize-3: 2.8rem;
     }
+
     .upcoming-card.left .card-meta {
         right: -10%;
     }
+
     .upcoming-card.right .card-meta {
         left: 20%;
     }
+
     .upcoming-time .time {
         --fontSize-1: 5rem;
     }
+
     /**
    * NEWS 
    */
@@ -955,10 +975,11 @@ body {
  */
 
 @media (min-width: 992px) {
+
     /**
    * CUSTOM PROPERTY
    */
-     :root {
+    :root {
         /**
      * TYPOGRAPHY
      */
@@ -969,43 +990,52 @@ body {
      */
         --section-spacing: 100px;
     }
+
     /**
    * REUSED STYLE
    */
     .container {
         max-width: 960px;
     }
+
     .h2 {
         line-height: 1.1;
     }
+
     /**
    * HEADER
    */
     .nav-toggle-btn {
         display: none;
     }
+
     .navbar,
     .navbar.active {
         all: unset;
         display: block;
     }
+
     .navbar-item,
     .navbar-item:last-child {
         border: none;
     }
+
     .navbar-list {
         display: flex;
     }
+
     .header .btn {
         display: grid;
         text-align: center;
     }
+
     /**
    * HERO
    */
     .hero-banner-bg {
         transform: scale(1.2);
     }
+
     /**
    * UPCOMING
    */
@@ -1014,23 +1044,28 @@ body {
         grid-template-columns: 1fr 0.5fr 1fr;
         align-items: center;
     }
+
     .upcoming-time {
         margin-block: 0;
     }
+
     .upcoming-card .card-meta {
         left: 50%;
         bottom: -30px;
         transform: translateX(-50%);
     }
+
     .upcoming-card.right .card-meta {
         left: 50%;
     }
+
     /**
    * NEWS
    */
     .news-list {
         grid-template-columns: repeat(3, 1fr);
     }
+
     /**
    * FOOTER
    */
@@ -1045,28 +1080,34 @@ body {
  */
 
 @media (min-width: 1200px) {
+
     /**
    * REUSED STYLE
    */
     .container {
         max-width: 1140px;
     }
+
     .section-text {
         margin-block-end: 60px;
     }
+
     /**
    * HERO
    */
     .hero {
         padding-block-start: 250px;
     }
+
     .hero-banner-bg {
         transform: scale(1.2);
     }
+
     .hero-banner .w-100 {
         max-width: max-content;
         margin-inline: auto;
     }
+
     /**
    * UPCOMING
    */
@@ -1074,21 +1115,26 @@ body {
         max-height: 180px;
         width: auto;
     }
+
     .upcoming-card .card-meta {
         bottom: 0;
     }
+
     .upcoming-card.right .card-meta {
         left: 35%;
     }
+
     .upcoming-time .time {
         --fontSize-1: 6.2rem;
     }
+
     /**
    * FOOTER
    */
     .footer-top .container {
         grid-template-columns: 1f 0.5fr 0.5fr 1fr;
     }
+
     .footer .logo img {
         width: 305px;
         height: 200px;
@@ -1259,13 +1305,16 @@ select {
     body {
         padding: 0 4em;
     }
+
     .contact-wrapper {
         display: grid;
         grid-template-columns: 2fr 1fr;
     }
+
     .contact-wrapper>* {
         padding: 2em;
     }
+
     .contact-info h4,
     .contact-info ul,
     .contact-info p {
